--- a/Covid-19/templates/index.html
+++ b/Covid-19/templates/index.html
@@ -28,7 +28,7 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <div class="card bg-dark text-white">
-                            <img src="https://www.cdc.gov/dotw/covid-19/images/main_928px.jpg" class="card-img" alt="Covid">
+                            <img src="https://www.cdc.gov/dotw/covid-19/images/main_928px.jpg" class="card-img custom-height" alt="Covid">
                             <div class="card-img-overlay">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -86,7 +86,7 @@
             <div class="col-md-6">
                 <!-- <input type="text" class="form-control" id="inputPassword4" placeholder="Name"> -->
                 <div class="dropdown">
-                    <button class="btn btn-secondary  dropdown-toggle customWidth" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                       India
                     </button>
                     <ul class="dropdown-menu customWidth">
@@ -96,7 +96,7 @@
             </div>
             <div class="col-md-6">
                 <div class="dropdown">
-                    <button class="btn btn-secondary  dropdown-toggle customWidth" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                       City
                     </button>
                     <ul class="dropdown-menu customWidth">
@@ -109,7 +109,7 @@
             <div class="col-md-6">
                 <!-- <input type="text" class="form-control" id="inputState" placeholder="State"> -->
                 <div class="dropdown">
-                    <button class="btn btn-secondary  dropdown-toggle customWidth" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                       State
                     </button>
                     <ul class="dropdown-menu customWidth">
