--- a/Covid-19/templates/index.html
+++ b/Covid-19/templates/index.html
@@ -21,7 +21,7 @@
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                         aria-expanded="true" aria-controls="collapseOne">
-                        <strong>Coronavirus Disease 2019 (COVID-19)</strong>
+                        Coronavirus Disease 2019 (COVID-19)
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
@@ -31,14 +31,11 @@
                             <img src="https://www.cdc.gov/dotw/covid-19/images/main_928px.jpg" class="card-img custom-height" alt="Covid">
                             <div class="card-img-overlay">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text"><strong>COVID-19</strong> is a respiratory disease caused by <strong>SARS-CoV-2</strong>, a new coronavirus discovered
-                                     in 2019. The virus is thought to spread mainly from person to person through respiratory droplets produced when an infected person coughs, sneezes, or
-                                talks. Some people who are infected may not have symptoms. For people who have symptoms, illness can range from mild to
-                                severe. Adults 65 years and older and people of any age with underlying medical conditions are at higher risk for severe
-                                illness.</p>
-                                <p class="card-text">The virus that causes <strong>COVID-19</strong> spreads very easily between people, especially when an infected person coughs, sneezes,
-                                or talks. Information from the ongoing pandemic suggests that the virus spreads more efficiently than influenza but not
-                                as efficiently as measles, which is highly contagious.</p>
+                                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                                    Ab doloremque totam quis ratione, voluptatum iste error. Nesciunt, sapiente,
+                                     ratione dolor aut ipsum neque consequuntur doloremque laboriosam possimus 
+                                     aperiam qui nisi!</p>
+                                <p class="card-text">This is a card footer</p>
                             </div>
                         </div>
                     </div>
@@ -48,29 +45,15 @@
                 <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        <strong>Key Facts</strong>
+                        Number 2
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <ul class="card-text list-group">
-                            <li class="list-group-item list-group-item-dark">The virus that causes COVID-19 can spread through respiratory
-                                droplets when
-                                an infected person coughs, sneezes, or talks.</li>
-                            <li class="list-group-item list-group-item-dark">Symptoms may appear 2-14 days after someone is exposed to the virus
-                                and can
-                                include fever, chills, and cough.</li>
-                            <li class="list-group-item list-group-item-dark">Some people who are infected may not have symptoms, which is why
-                                everyone
-                                should take everyday preventive actions.</li>
-                            <li class="list-group-item list-group-item-dark">Anyone can have severe illness from COVID-19, especially older
-                                adults and
-                                people of any age with underlying conditions.</li>
-                            <li class="list-group-item list-group-item-dark">If you test positive or negative for any COVID-19 test, you still
-                                should
-                                take steps to protect yourself and others.</li>
-                        </ul>
+                        Lorem ipsum dolor sit 
+                        amet consectetur adipisicing elit. Sit ha
+                        rum incidunt recusandae perspiciatis dolorum totam ex a cumque! Earum, ad!
                     </div>
                 </div>
             </div>
@@ -93,8 +76,8 @@
         </div>
     </div>
 
-    <div class="container mt-5 mb-2">
-        <h1 class="text-center"><strong>COVID-19 STATS</strong></h1>
+    <div class="container mt-5">
+        <h1 class="text-center">COVID-19 STATS</h1>
         <br>
         <form class="row g-3">
             <div class="col-md-6">
@@ -106,7 +89,7 @@
                     <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                       India
                     </button>
-                    <ul class="dropdown-menu customWidth">
+                    <ul class="dropdown-menu custom-width">
                         <li><a class="dropdown-item" href="#">India</a></li>
                       </ul>
                   </div>
@@ -116,7 +99,7 @@
                     <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                       City
                     </button>
-                    <ul class="dropdown-menu customWidth">
+                    <ul class="dropdown-menu custom-width">
                         <li><a class="dropdown-item" href="#">Regular link</a></li>
                         <li><a class="dropdown-item active" href="#" aria-current="true">Active link</a></li>
                         <li><a class="dropdown-item" href="#">Another link</a></li>
@@ -129,7 +112,7 @@
                     <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                       State
                     </button>
-                    <ul class="dropdown-menu customWidth">
+                    <ul class="dropdown-menu custom-width">
                         <li><a class="dropdown-item" href="#">Regular link</a></li>
                         <li><a class="dropdown-item active" href="#" aria-current="true">Active link</a></li>
                         <li><a class="dropdown-item" href="#">Another link</a></li>
@@ -137,57 +120,10 @@
                   </div>
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-outline-dark">Get Report</button>
+                <button type="submit" class="btn btn-outline-success">Get Report</button>
             </div>
         </form>
     </div>
-
-    <div class="container mt-5">
-        <h1><strong>Results</strong></h1>
-        <div class="row">
-            <div class="card text-white bg-dark me-5 col-md-2">
-                <div class="card-header">Header</div>
-                <div class="card-body">
-                    <h5 class="card-title">Dark card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                        content.</p>
-                </div>
-            </div>
-            <div class="card text-white bg-dark me-5 col-md-2">
-                <div class="card-header">Header</div>
-                <div class="card-body">
-                    <h5 class="card-title">Dark card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                        content.</p>
-                </div>
-            </div>
-            <div class="card text-white bg-dark me-5 col-md-2">
-                <div class="card-header">Header</div>
-                <div class="card-body">
-                    <h5 class="card-title">Dark card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                        content.</p>
-                </div>
-            </div>
-            <div class="card text-white bg-dark me-5 col-md-2">
-                <div class="card-header">Header</div>
-                <div class="card-body">
-                    <h5 class="card-title">Dark card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                        content.</p>
-                </div>
-            </div>
-            <div class="card text-white bg-dark col-md-2">
-                <div class="card-header">Header</div>
-                <div class="card-body">
-                    <h5 class="card-title">Dark card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                        content.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     <!-- Optional JavaScript; choose one of the two! -->
 
