--- a/Covid-19/templates/index.html
+++ b/Covid-19/templates/index.html
@@ -93,8 +93,8 @@
         </div>
     </div>
 
-    <div class="container mt-5 mb-2">
-        <h1 class="text-center"><strong>COVID-19 STATS</strong></h1>
+    <div class="container mt-5">
+        <h1 class="text-center">COVID-19 STATS</h1>
         <br>
         <form class="row g-3">
             <div class="col-md-6">
@@ -103,41 +103,44 @@
             <div class="col-md-6">
                 <!-- <input type="text" class="form-control" id="inputPassword4" placeholder="Name"> -->
                 <div class="dropdown">
-                    <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                      India
+                    <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        India
                     </button>
-                    <ul class="dropdown-menu customWidth">
+                    <ul class="dropdown-menu custom-width">
                         <li><a class="dropdown-item" href="#">India</a></li>
-                      </ul>
-                  </div>
+                    </ul>
+                </div>
             </div>
             <div class="col-md-6">
                 <div class="dropdown">
-                    <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                      City
+                    <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        City
                     </button>
-                    <ul class="dropdown-menu customWidth">
+                    <ul class="dropdown-menu custom-width">
                         <li><a class="dropdown-item" href="#">Regular link</a></li>
                         <li><a class="dropdown-item active" href="#" aria-current="true">Active link</a></li>
                         <li><a class="dropdown-item" href="#">Another link</a></li>
-                      </ul>
-                  </div>
+                    </ul>
+                </div>
             </div>
             <div class="col-md-6">
                 <!-- <input type="text" class="form-control" id="inputState" placeholder="State"> -->
                 <div class="dropdown">
-                    <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                      State
+                    <button class="btn btn-secondary  dropdown-toggle custom-width" type="button" id="dropdownMenuButton1"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        State
                     </button>
-                    <ul class="dropdown-menu customWidth">
+                    <ul class="dropdown-menu custom-width">
                         <li><a class="dropdown-item" href="#">Regular link</a></li>
                         <li><a class="dropdown-item active" href="#" aria-current="true">Active link</a></li>
                         <li><a class="dropdown-item" href="#">Another link</a></li>
-                      </ul>
-                  </div>
+                    </ul>
+                </div>
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-outline-dark">Get Report</button>
+                <button type="submit" class="btn btn-outline-success">Get Report</button>
             </div>
         </form>
     </div>
