--- a/Covid-19/templates/index.html
+++ b/Covid-19/templates/index.html
@@ -192,41 +192,31 @@
             <div class="card text-white bg-dark me-5 col-md-2 result-item-div">
                 <div class="card-header">Header</div>
                 <div class="card-body">
-                    <h5 class="card-title">Dark card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                        content.</p>
+                    <h5 class="card-title"></h5>
                 </div>
             </div>
             <div class="card text-white bg-dark me-5 col-md-2 result-item-div">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h5 class="card-title">Dark card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                        content.</p>
                 </div>
             </div>
             <div class="card text-white bg-dark me-5 col-md-2 result-item-div">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h5 class="card-title">Dark card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                        content.</p>
                 </div>
             </div>
             <div class="card text-white bg-dark me-5 col-md-2 result-item-div">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h5 class="card-title">Dark card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                        content.</p>
                 </div>
             </div>
             <div class="card text-white bg-dark col-md-2 result-item-div">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h5 class="card-title">Dark card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                        content.</p>
                 </div>
             </div>
         </div>
