--- a/Covid-19/templates/index.html
+++ b/Covid-19/templates/index.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item mx-2">
-                        <a class="nav-link active" aria-current="page" href="#">About Us</a>
+                        <a class="nav-link active" aria-current="page" href="https://github.com/orgs/ChatbotCEMK/people">About Us</a>
                     </li>
                     <li class="nav-item mx-2">
                         <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom"
@@ -254,22 +254,22 @@
   
       <!-- Right -->
       <div>
-        <a href="#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="!#" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="!#" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="!#" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-google"></i>
         </a>
-        <a href="#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="!#" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="!#" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="https://github.com/orgs/ChatbotCEMK/" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-github"></i>
         </a>
       </div>
@@ -286,11 +286,10 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>Company name
+              <i class="fas fa-gem me-3"></i>Covid-19 Tracker App
             </h6>
             <p>
-              Here you can use rows and columns to organize your footer content. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
+              This a web application based  tracker which provides the number of confirmed cases and deaths from novel Corona virus by country. The data are drawn from the COVID-19 data API by Sourceres on rapidapi.com.
             </p>
           </div>
           <!-- Grid column -->
@@ -299,19 +298,19 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Products
+              Reference
             </h6>
             <p>
-              <a href="#!" class="text-reset">Angular</a>
+              <a href="https://flask.palletsprojects.com/en/2.0.x/quickstart/" class="text-reset">Flask</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">React</a>
+              <a href="https://jinja.palletsprojects.com/en/3.0.x/" class="text-reset">Jinja</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Vue</a>
+              <a href="https://rapidapi.com/marketplace" class="text-reset">Rapid API</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Laravel</a>
+              <a href="https://getbootstrap.com/docs/5.0/getting-started/introduction/" class="text-reset">Bootstrap v5.0</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -323,13 +322,13 @@
               Useful links
             </h6>
             <p>
-              <a href="#!" class="text-reset">Pricing</a>
+              <a href="https://github.com/ChatbotCEMK/covid19-tracker-using-flask-and-rapid-api" class="text-reset">Documentation</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Settings</a>
+              <a href="https://github.com/ChatbotCEMK/covid19-tracker-using-flask-and-rapid-api/archive/refs/heads/main.zip" class="text-reset">Downloads</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Orders</a>
+              <a href="https://rapidapi.com/Gramzivi/api/covid-19-data/" class="text-reset">API Documentation</a>
             </p>
             <p>
               <a href="#!" class="text-reset">Help</a>
@@ -343,13 +342,13 @@
             <h6 class="text-uppercase fw-bold mb-4">
               Contact
             </h6>
-            <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+            <p><i class="fas fa-home me-3"></i> West Bengal, India</p>
             <p>
               <i class="fas fa-envelope me-3"></i>
-              info@example.com
+              cemkproject001@gmail.com
             </p>
-            <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-            <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+            <p><i class="fas fa-phone me-3"></i> +91 8272990599 </p>
+            <p><i class="fas fa-phone me-3"></i> +91 7044731856</p>
           </div>
           <!-- Grid column -->
         </div>
@@ -361,7 +360,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2021 Copyright:
-      <a class="text-reset fw-bold" href="#!">Ritam & Sohail</a>
+      <a class="text-reset fw-bold" href="https://github.com/ChatbotCEMK/covid19-tracker-using-flask-and-rapid-api">Ritam & Sohail</a>
     </div>
     <!-- Copyright -->
   </footer>
