--- a/Covid-19/templates/index.html
+++ b/Covid-19/templates/index.html
@@ -32,7 +32,7 @@
                     </li>
                     <li class="nav-item mx-2">
                         <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            title="Or Call at +91-7044731856">
+                            title="Or Call at +91-7044731856 or +91-8272990599">
                             Contact Us
                         </button>
                     </li>
@@ -254,19 +254,19 @@
   
       <!-- Right -->
       <div>
-        <a href="!#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="#!" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="!#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="#!" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="!#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="#!" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-google"></i>
         </a>
-        <a href="!#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="#!" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="!#" class="me-4 text-reset" style="text-decoration: none;">
+        <a href="#!" class="me-4 text-reset" style="text-decoration: none;">
           <i class="fab fa-linkedin"></i>
         </a>
         <a href="https://github.com/orgs/ChatbotCEMK/" class="me-4 text-reset" style="text-decoration: none;">
