--- a/Covid-19/templates/index.html
+++ b/Covid-19/templates/index.html
@@ -9,18 +9,17 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <!-- <link rel="stylesheet" type="text/css" href="fontawsome.css"> -->
     <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-free-5.15.3-web/css/all.css') }}">
 
     <title>Covid-19</title>
 </head>
 
-<body>
+<body style="background: linear-gradient(to top left, #666699 -9%, #ffffff 100%);">
     <!-- NavBar Start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Covid-19</a>
+            <a class="navbar-brand" href="/">Covid-19</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,10 +30,10 @@
                         <a class="nav-link active" aria-current="page" href="https://github.com/orgs/ChatbotCEMK/people">About Us</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                        <a href="#footer"><button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom"
                             title="Or Call at +91-7044731856 or +91-8272990599">
                             Contact Us
-                        </button>
+                        </button></a>
                     </li>
                 </ul>    
             </div>
@@ -48,7 +47,7 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                        aria-expanded="true" aria-controls="collapseOne">
+                        aria-expanded="true" aria-controls="collapseOne" style="background: #A9A9A9;">
                         <strong>Coronavirus Disease 2019 (COVID-19)</strong>
                     </button>
                 </h2>
@@ -75,7 +74,7 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="background: #A9A9A9;">
                         <strong>Key Facts</strong>
                     </button>
                 </h2>
@@ -105,7 +104,7 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="background: #A9A9A9;">
                         <strong>Prevention Tips</strong>
                     </button>
                 </h2>
@@ -158,9 +157,9 @@
                         Coming Soon
                     </button>
                     <ul class="dropdown-menu custom-width">
-                        <li><a class="dropdown-item" href="#">Regular link</a></li>
-                        <li><a class="dropdown-item" href="#" aria-current="true">Active link</a></li>
-                        <li><a class="dropdown-item" href="#">Another link</a></li>
+                        <li><a class="dropdown-item" href="#">Coming Soon</a></li>
+                        <li><a class="dropdown-item" href="#" aria-current="true">Coming Soon</a></li>
+                        <li><a class="dropdown-item" href="#">Coming Soon</a></li>
                     </ul>
                 </div>
             </div>
@@ -172,9 +171,9 @@
                         Coming Soon
                     </button>
                     <ul class="dropdown-menu custom-width">
-                        <li><a class="dropdown-item" href="#">Regular link</a></li>
-                        <li><a class="dropdown-item" href="#" aria-current="true">Active link</a></li>
-                        <li><a class="dropdown-item" href="#">Another link</a></li>
+                        <li><a class="dropdown-item" href="#">Coming Soon</a></li>
+                        <li><a class="dropdown-item" href="#" aria-current="true">Coming Soon</a></li>
+                        <li><a class="dropdown-item" href="#">Coming Soon</a></li>
                     </ul>
                 </div>
             </div>
@@ -241,7 +240,7 @@
     -->
 </body>
     <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
+<footer class="text-center text-lg-start bg-dark text-muted" id="footer">
     <!-- Section: Social media -->
     <section
       class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
@@ -343,12 +342,12 @@
               Contact
             </h6>
             <p><i class="fas fa-home me-3"></i> West Bengal, India</p>
-            <p>
+            <a href="mailto: cemkproject001@gmail.com" class="text-reset"><p>
               <i class="fas fa-envelope me-3"></i>
               cemkproject001@gmail.com
-            </p>
-            <p><i class="fas fa-phone me-3"></i> +91 8272990599 </p>
-            <p><i class="fas fa-phone me-3"></i> +91 7044731856</p>
+            </p></a>
+            <a href="tel:+918272990599" class="text-reset"><p><i class="fas fa-phone me-3"></i> +91 8272990599 </p></a>
+            <a href="tel:+917044731856" class="text-reset"><p><i class="fas fa-phone me-3"></i> +91 7044731856</p></a>
           </div>
           <!-- Grid column -->
         </div>
@@ -365,5 +364,10 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
+  <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+  <df-messenger intent="WELCOME" chat-title="HotBot" agent-id="9d210f8f-8c09-490a-beb9-5bef9666fa08" language-code="en">
+  </df-messenger>
 
 </html>
